# cotagraph

./: .env.example  .gitignore  Makefile  docker-compose.yml  project.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py  models.py
backend/app/routers/: deputies.py  graph.py  stats.py
backend/tests/: conftest.py  test_deputies.py  test_deputy_amendments.py  test_deputy_detail.py  test_graph.py  test_stats.py
docs/: AGENT_START_HERE.md  INDEX.md
docs/architecture/: api_contracts.md  database_schema.md  frontend_components.md  graph_schema.md  system_overview.md
docs/architecture/adr/: ADR-001-neo4j.md  ADR-002-postgresql.md  ADR-003-fastapi.md  ADR-004-react-vite.md  ADR-005-cytoscapejs.md  ADR-006-search-first-ux.md  ADR-007-ingestion-separation.md  ADR-008-free-tier-cloud.md  ADR-009-testing-strategy.md
docs/context/: project_overview.md  roadmap.md  status.md
docs/data/: data_dictionary.md  data_quality.md  data_sources.md  etl_pipeline.md
docs/diagrams/: all_diagrams.md
docs/infrastructure/: deployment.md  free_tier_stack.md  local_dev.md
docs/process/: cicd_pipeline.md  collaboration.md  localization.md  testing_strategy.md  version_strategy.md
docs/superpowers/specs/: 2026-04-10-graph-explorer-ux-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: GraphCanvas.tsx  InfoDrawer.tsx  (+1 more)
ingestion/: Dockerfile  pyproject.toml
ingestion/pipelines/: amendments_loader.py
(+8 files in other folders)
