[project]
name = "cotagraph-backend"
version = "0.1.0"
description = "Cotagraph API — Brazilian parliamentary spending transparency"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "neo4j>=5.27",
    "redis>=5.2",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "alembic>=1.14",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
