[project]
name = "cotagraph-ingestion"
version = "0.1.0"
description = "Cotagraph ETL pipelines — data ingestion into PostgreSQL and Neo4j"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "neo4j>=5.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
